# rgb-image-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
rgb_img_viewer/: main.py
