[metadata]
name = rgb_img_viewer
version = 0.0.1
description = rgb_img_viewer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/essamgouda97/rgb_img_viewer
author = Essam Gouda
author_email = essamgouda97@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
long_descrtipion = file: README.md

[options]
packages = find:
install_requires =
    pygame>=2.1.2
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    rgb_img_viewer = rgb_img_viewer.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
max-line-length = 160
